Add seed script for venues with scrapers and enhance date parsing in supabase_writer.py
- Introduced `seed_venues_scraper.sql` to seed venues (Concertgebouw, Pakhuis de Zwijger, De Balie, Paradiso) for better visibility in the app.
- Improved `parse_event_date()` in `supabase_writer.py` to handle additional date formats, including today’s date and cases without a specified year, ensuring more events are parsed correctly and reducing skipped entries.

--- a/logging/2026-02-12.md
+++ b/logging/2026-02-12.md
@@ -57,6 +57,27 @@ Summary of what we did today on the Amsterdam Culture Tracker project.
 
 - **Duplicate key error**: "ON CONFLICT DO UPDATE command cannot affect row a second time" — deduplicated rows by `(event_title, event_date)` before upsert in `supabase_writer.py`; log when rows are deduped.
 
+### 6.1 Date parsing — why only Concertgebouw and De Balie appeared in the DB
+
+Events are only written to Supabase when `parse_event_date()` returns a date. Other venues use formats the old parser didn’t handle, so their events were skipped (“Skipped 422 event(s) with unparseable dates”).
+
+| Venue | Example date string | Before | After |
+|-------|---------------------|--------|--------|
+| Concertgebouw | `do 12 feb 2026, 20:15` | ✅ Parsed | ✅ Parsed |
+| De Balie | `vr 13 februari 2026, 19:30` | ✅ Parsed | ✅ Parsed |
+| Paradiso / Rode Hoed | `do 12 feb. 2026, 00:00` (dot after month) | ❌ Failed | ✅ Parsed |
+| Pakhuis / De Kleine Komedie | `ma 16 feb, 19.30` (no year) | ❌ Failed | ✅ Parsed (year inferred) |
+| Pakhuis | `Vandaag, 20.00` | ❌ Failed | ✅ Parsed (today) |
+
+**Changes in `supabase_writer.py` (`parse_event_date()`):**
+
+1. **Optional dot after month** — e.g. `feb. 2026` (Paradiso, Rode Hoed).
+2. **No year → infer current year** — e.g. `ma 16 feb, 19.30`; if that date is already in the past, use next year.
+3. **“Vandaag”** — return today’s date.
+4. **Fallback** — keep existing pattern for `DD month YYYY` (e.g. De Balie’s “13 februari 2026”).
+
+After re-running the scraper, far fewer events are skipped and Paradiso, Rode Hoed, De Kleine Komedie, and Pakhuis de Zwijger events appear in the database and app.
+
 ---
 
 ## 7. iPhone deployment + environment
@@ -79,6 +100,6 @@ Summary of what we did today on the Amsterdam Culture Tracker project.
 | Area     | Files |
 |----------|--------|
 | iOS      | `AmsterdamCultureTrackerApp.swift`, `NewEventsTracker.swift`, `EventsListView.swift`, `EventDetailView.swift`, `VenueDetailView.swift`, `VenueMapView.swift`, `SupabaseService.swift`, `Venue.swift`; new: `Exhibition.swift`, `SavedEvent.swift`, `SavedEventsView.swift` |
-| Scraper  | `supabase_writer.py` (dedup, scraper_runs logging) |
+| Scraper  | `supabase_writer.py` (dedup, scraper_runs logging, date parsing for all venues) |
 | Schema   | `schema.sql`, `migrations/002_scraper_runs.sql` |
 | CI/docs  | `.github/workflows/daily-scrape.yml`, `cultural_venues_scraper/README.md`, `ios/README.md` |
